fix: implement webcall method