@@ -1,8 +1,6 @@
 package nus.iss.team3.backend.domainService.recipe;
 
 import jakarta.annotation.PostConstruct;
-import java.util.Collections;
-import java.util.List;
 import nus.iss.team3.backend.ProfileConfig;
 import nus.iss.team3.backend.domainService.webservice.IWebserviceCaller;
 import nus.iss.team3.backend.entity.Recipe;
@@ -13,6 +11,9 @@ import org.springframework.context.annotation.Profile;
 import org.springframework.core.ParameterizedTypeReference;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
+
+import java.util.Collections;
+import java.util.List;
 
 /**
  * Implementation of IRecipeService that calls REST APIs using IWebserviceCallerGen.
@@ -182,12 +183,38 @@ public class RecipeWebCaller implements IRecipeService {
 
   @Override
   public List<Recipe> getRecipesByDifficulty(boolean isDesc) {
-    return List.of();
+    String url = getUrl("/recommend?isDesc="+ isDesc +"&isByRating=false");
+    try {
+      ParameterizedTypeReference<List<Recipe>> typeRef = new ParameterizedTypeReference<>() {};
+      ResponseEntity<List<Recipe>> response = webServiceCaller.getCall(url, typeRef);
+      if (response.getStatusCode().is2xxSuccessful()) {
+        return response.getBody();
+      } else {
+        logger.error("Failed to retrieve all recipes by difficulty. Status code: {}", response.getStatusCode());
+        return Collections.emptyList();
+      }
+    } catch (Exception e) {
+      logger.error("Error retrieving all recipes by difficulty: {}", e.getMessage());
+      return Collections.emptyList();
+    }
   }
 
   @Override
   public List<Recipe> getRecipesByRating(boolean isDesc) {
-    return List.of();
+    String url = getUrl("/recommend"+ isDesc +"&isByRating=true");
+    try {
+      ParameterizedTypeReference<List<Recipe>> typeRef = new ParameterizedTypeReference<>() {};
+      ResponseEntity<List<Recipe>> response = webServiceCaller.getCall(url, typeRef);
+      if (response.getStatusCode().is2xxSuccessful()) {
+        return response.getBody();
+      } else {
+        logger.error("Failed to retrieve all recipes by rating. Status code: {}", response.getStatusCode());
+        return Collections.emptyList();
+      }
+    } catch (Exception e) {
+      logger.error("Error retrieving all recipes by rating: {}", e.getMessage());
+      return Collections.emptyList();
+    }
   }
 
   /**
